<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.MainPage"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/main_pages">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myapplication.PrimaryChecks"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/primary_checks">

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.myapplication.MapsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_maps" />
</navigation>